--- a/src/Ui_Files/DockWidgets/Ui/dw_FTIR.ui
+++ b/src/Ui_Files/DockWidgets/Ui/dw_FTIR.ui
@@ -195,6 +195,20 @@
         <item row="7" column="2">
          <widget class="QSpinBox" name="skiprows_sb"/>
         </item>
+        <item row="6" column="3">
+         <widget class="QComboBox" name="plotside_cb">
+          <item>
+           <property name="text">
+            <string>Left Ax</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Right Ax</string>
+           </property>
+          </item>
+         </widget>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="tab_3">
