--- a/src/Ui_Files/Dialogs/start_dialog.ui
+++ b/src/Ui_Files/Dialogs/start_dialog.ui
@@ -30,7 +30,7 @@
    <item row="4" column="1">
     <widget class="QPushButton" name="SE_pb">
      <property name="text">
-      <string>Spectroscopic Ellipsometry</string>
+      <string>SE/QMS</string>
      </property>
     </widget>
    </item>
