--- a/src/Ui_Files/DockWidgets/Ui/dw_SE.ui
+++ b/src/Ui_Files/DockWidgets/Ui/dw_SE.ui
@@ -589,7 +589,7 @@ p, li { white-space: pre-wrap; }
                <property name="geometry">
                 <rect>
                  <x>0</x>
-                 <y>-195</y>
+                 <y>-236</y>
                  <width>558</width>
                  <height>640</height>
                 </rect>
@@ -1566,122 +1566,135 @@ p, li { white-space: pre-wrap; }
                 <item row="13" column="6">
                  <widget class="QDoubleSpinBox" name="size11">
                   <property name="maximum">
-                   <double>1.000000000000000</double>
+                   <double>99.000000000000000</double>
                   </property>
                   <property name="singleStep">
                    <double>0.100000000000000</double>
                   </property>
                   <property name="value">
-                   <double>1.000000000000000</double>
+                   <double>5.000000000000000</double>
                   </property>
                  </widget>
                 </item>
                 <item row="14" column="6">
                  <widget class="QDoubleSpinBox" name="size12">
                   <property name="maximum">
-                   <double>1.000000000000000</double>
+                   <double>99.000000000000000</double>
                   </property>
                   <property name="singleStep">
                    <double>0.100000000000000</double>
                   </property>
                   <property name="value">
-                   <double>1.000000000000000</double>
+                   <double>5.000000000000000</double>
                   </property>
                  </widget>
                 </item>
                 <item row="15" column="6">
                  <widget class="QDoubleSpinBox" name="size13">
                   <property name="maximum">
-                   <double>1.000000000000000</double>
+                   <double>99.000000000000000</double>
                   </property>
                   <property name="singleStep">
                    <double>0.100000000000000</double>
                   </property>
                   <property name="value">
-                   <double>1.000000000000000</double>
+                   <double>5.000000000000000</double>
                   </property>
                  </widget>
                 </item>
                 <item row="16" column="6">
                  <widget class="QDoubleSpinBox" name="size14">
                   <property name="maximum">
-                   <double>1.000000000000000</double>
+                   <double>99.000000000000000</double>
                   </property>
                   <property name="singleStep">
                    <double>0.100000000000000</double>
                   </property>
                   <property name="value">
-                   <double>1.000000000000000</double>
+                   <double>5.000000000000000</double>
                   </property>
                  </widget>
                 </item>
                 <item row="17" column="6">
                  <widget class="QDoubleSpinBox" name="size15">
                   <property name="maximum">
-                   <double>1.000000000000000</double>
+                   <double>99.000000000000000</double>
                   </property>
                   <property name="singleStep">
                    <double>0.100000000000000</double>
                   </property>
                   <property name="value">
-                   <double>1.000000000000000</double>
+                   <double>5.000000000000000</double>
                   </property>
                  </widget>
                 </item>
                 <item row="18" column="6">
                  <widget class="QDoubleSpinBox" name="size16">
                   <property name="maximum">
-                   <double>1.000000000000000</double>
+                   <double>99.000000000000000</double>
                   </property>
                   <property name="singleStep">
                    <double>0.100000000000000</double>
                   </property>
                   <property name="value">
-                   <double>1.000000000000000</double>
+                   <double>5.000000000000000</double>
                   </property>
                  </widget>
                 </item>
                 <item row="19" column="6">
                  <widget class="QDoubleSpinBox" name="size17">
                   <property name="maximum">
-                   <double>1.000000000000000</double>
+                   <double>99.000000000000000</double>
                   </property>
                   <property name="singleStep">
                    <double>0.100000000000000</double>
                   </property>
                   <property name="value">
-                   <double>1.000000000000000</double>
+                   <double>5.000000000000000</double>
                   </property>
                  </widget>
                 </item>
                 <item row="20" column="6">
                  <widget class="QDoubleSpinBox" name="size18">
                   <property name="maximum">
-                   <double>1.000000000000000</double>
+                   <double>99.000000000000000</double>
                   </property>
                   <property name="singleStep">
                    <double>0.100000000000000</double>
                   </property>
                   <property name="value">
-                   <double>1.000000000000000</double>
+                   <double>5.000000000000000</double>
                   </property>
                  </widget>
                 </item>
                 <item row="21" column="6">
                  <widget class="QDoubleSpinBox" name="size19">
                   <property name="maximum">
-                   <double>1.000000000000000</double>
+                   <double>99.000000000000000</double>
                   </property>
                   <property name="singleStep">
                    <double>0.100000000000000</double>
                   </property>
                   <property name="value">
-                   <double>1.000000000000000</double>
+                   <double>5.000000000000000</double>
                   </property>
                  </widget>
                 </item>
                 <item row="22" column="6">
                  <widget class="QDoubleSpinBox" name="size20">
+                  <property name="maximum">
+                   <double>99.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>5.000000000000000</double>
+                  </property>
+                 </widget>
+                </item>
+                <item row="13" column="7">
+                 <widget class="QDoubleSpinBox" name="s11_alpha">
                   <property name="maximum">
                    <double>1.000000000000000</double>
                   </property>
@@ -1693,35 +1706,122 @@ p, li { white-space: pre-wrap; }
                   </property>
                  </widget>
                 </item>
-                <item row="13" column="7">
-                 <widget class="QDoubleSpinBox" name="s11_alpha"/>
-                </item>
                 <item row="14" column="7">
-                 <widget class="QDoubleSpinBox" name="s12_alpha"/>
+                 <widget class="QDoubleSpinBox" name="s12_alpha">
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>1.000000000000000</double>
+                  </property>
+                 </widget>
                 </item>
                 <item row="15" column="7">
-                 <widget class="QDoubleSpinBox" name="s13_alpha"/>
+                 <widget class="QDoubleSpinBox" name="s13_alpha">
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>1.000000000000000</double>
+                  </property>
+                 </widget>
                 </item>
                 <item row="16" column="7">
-                 <widget class="QDoubleSpinBox" name="s14_alpha"/>
+                 <widget class="QDoubleSpinBox" name="s14_alpha">
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>1.000000000000000</double>
+                  </property>
+                 </widget>
                 </item>
                 <item row="17" column="7">
-                 <widget class="QDoubleSpinBox" name="s15_alpha"/>
+                 <widget class="QDoubleSpinBox" name="s15_alpha">
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>1.000000000000000</double>
+                  </property>
+                 </widget>
                 </item>
                 <item row="18" column="7">
-                 <widget class="QDoubleSpinBox" name="s16_alpha"/>
+                 <widget class="QDoubleSpinBox" name="s16_alpha">
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>1.000000000000000</double>
+                  </property>
+                 </widget>
                 </item>
                 <item row="19" column="7">
-                 <widget class="QDoubleSpinBox" name="s17_alpha"/>
+                 <widget class="QDoubleSpinBox" name="s17_alpha">
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>1.000000000000000</double>
+                  </property>
+                 </widget>
                 </item>
                 <item row="20" column="7">
-                 <widget class="QDoubleSpinBox" name="s18_alpha"/>
+                 <widget class="QDoubleSpinBox" name="s18_alpha">
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>1.000000000000000</double>
+                  </property>
+                 </widget>
                 </item>
                 <item row="21" column="7">
-                 <widget class="QDoubleSpinBox" name="s19_alpha"/>
+                 <widget class="QDoubleSpinBox" name="s19_alpha">
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>1.000000000000000</double>
+                  </property>
+                 </widget>
                 </item>
                 <item row="22" column="7">
-                 <widget class="QDoubleSpinBox" name="s20_alpha"/>
+                 <widget class="QDoubleSpinBox" name="s20_alpha">
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>1.000000000000000</double>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </widget>
